--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <body>
     <div class="main-wrapper">
       <!-- PRLD-->
+      <div class="prld" id="prld"></div>
       <!-- / CRLS-->
       <div class="crls">
         <div class="crls__form call" id="callWrap"><a class="btt-close callClose"><span>Закрыть</span><i class="icn icn-close"></i></a>
