--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
             </div>
             <div class="js-tabs wrks__tbs">
               <div class="wrks__tbs-itm" id="tab1">
-                <div class="arn-msnr"><a class="cl cl-7 itm" href="#" style="background-image: url('img/project-1.jpg');">
+                <div class="arn-msnr"><a class="cl cl-7 itm img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-1.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -300,7 +300,7 @@
                       </div>
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                  </div></a><a class="cl cl-5 itm" href="#" style="background-image: url('img/project-2.jpg');">
+                  </div></a><a class="cl cl-5 itm img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-2.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -310,7 +310,7 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a>
                   <div class="cl-7">
-                    <div class="arn-msnr"><a class="cl cl-7 itm ht6" href="#" style="background-image: url('img/project-3.jpg');">
+                    <div class="arn-msnr"><a class="cl cl-7 itm ht6 img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-3.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -318,7 +318,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht6" href="#" style="background-image: url('img/project-4.jpg');">
+                      </div></a><a class="cl cl-5 itm ht6 img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-4.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -328,7 +328,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-7 itm ht5" href="#" style="background-image: url('img/project-5.jpg');">
+                      </div></a><a class="cl cl-7 itm ht5 img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-5.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -337,7 +337,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht5" href="#" style="background-image: url('img/project-7.jpg');">
+                      </div></a><a class="cl cl-5 itm ht5 img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-7.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title"> Листовка   для <span class="thm d-inline-block">сети  кальянных компании</span> 
@@ -348,7 +348,7 @@
                       </div></a>
                     </div>
                   </div>
-                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4" href="#" style="background-image: url('img/project-7.jpg');">
+                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-7.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">кроссфит проекта</span>
@@ -356,7 +356,7 @@
                         </div>
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                    </div></a><a class="cl cl-12 itm" href="#" style="background-image: url('img/project-8.jpg');">
+                    </div></a><a class="cl cl-12 itm img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-8.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">квест-комнаты</span> 
@@ -365,7 +365,7 @@
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a>
-                  </div><a class="cl cl-7 itm" href="#" style="background-image: url('img/project-9.jpg');">
+                  </div><a class="cl cl-7 itm img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-9.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -373,7 +373,7 @@
                       </div>
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                  </div></a><a class="cl cl-5 itm lst" href="#" style="background-image: url('img/project-all.jpg');">
+                  </div></a><a class="cl cl-5 itm lst img-bg" href="#"><img class="lazy-bg-js" src="#" data-src="img/project-all.jpg"/>
                   <div class="itm__more" id="loadWorks">
                     <big class="thm d-inline-block">
                       <big>+34</big><br/> проекта 
