--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b class="thm big">Сочный</b><br/><span class="thm">дизайн <span class="nw">и разработка</span></span><span class="d-inline-block nw">для вашего  бизнеса!</span></div>
@@ -106,7 +106,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b>
@@ -138,7 +138,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b>
@@ -168,7 +168,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b>Разработка</b><br/><span class="thm">  одностраничных сайтов </span></div>
@@ -197,7 +197,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b>
@@ -228,7 +228,7 @@
                     <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
                     <!-- / WRP-->
                     <div class="arn prm__wrp">
-                      <div class="row fx-aic">
+                      <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
                           <div class="prm__dsc">
                             <div class="h1 wow fadeInUp"><b>
