--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,16 @@
         <!-- / .Promo-->
         <section class="section" id="main">
           <div class="prm">
+            <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
+            <!-- / WRP-->
+            <div class="prm__pxs pxs">
+              <div class="px1 px px-1" id="px1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
+              <div class="px2 px px-2" id="px2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
+              <div class="px3 px px-3" id="px3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
+            </div>
             <div class="prm__slider prm__slider--js swiper-container">
               <div class="swiper-wrapper">
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -96,15 +101,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
-                  </div>
                   <!-- +e.slide.swiper-slide-->
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -128,15 +126,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
-                  </div>
                   <!-- +e.slide.swiper-slide-->
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -158,15 +149,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
-                  </div>
                   <!-- +e.slide.swiper-slide-->
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -187,15 +171,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
-                  </div>
                   <!-- +e.slide.swiper-slide-->
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -218,15 +195,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
-                  </div>
                   <!-- +e.slide.swiper-slide-->
                   <div class="prm__slide swiper-slide">
-                    <div class="wrp__bg wow slideInRight" data-wow-duration="1.2s"></div>
-                    <!-- / WRP-->
                     <div class="arn prm__wrp">
                       <div class="row">
                         <div class="col-md-8 col-lg-7 col-xl-7 col-xxxl-6">
@@ -247,11 +217,6 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="prm__pxs pxs">
-                    <div class="px1 px px-1"><img src="img/backs/promo-px-1.png" alt="" data-depth="1"/></div>
-                    <div class="px2 px px-2"><img src="img/backs/promo-px-2.png" alt="" data-depth="0.75"/></div>
-                    <div class="px3 px px-3"><img src="img/backs/promo-px-3.png" alt="" data-depth="0.5"/></div>
                   </div>
                   <!-- +e.slide.swiper-slide-->
               </div>
