add all windows

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <!-- PRLD-->
+    <div class="prld" id="prld"></div>
     <div class="main-wrapper">
       <!-- / CRLS-->
       <div class="crls">
