--- a/public/index.html
+++ b/public/index.html
@@ -753,7 +753,7 @@
                         <li><a class="s-servises__link" href="#">Сайт визитка</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="#" data-src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-2.png"/>
                       </div>
                     </div>
                   </div>
@@ -777,7 +777,7 @@
                         <li><a class="s-servises__link" href="#">Наружная реклама</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="#" data-src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-2.png"/>
                       </div>
                     </div>
                   </div>
@@ -795,7 +795,7 @@
                         <li><a class="s-servises__link" href="#">Упаковка бизнеса</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i" src="#" data-src="img/servises-3.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-3.png"/>
                       </div>
                     </div>
                   </div>
@@ -921,7 +921,7 @@
               </form>
             </div>
           </div>
-          <div class="footer text-center text-white"><a class="text-white tdu" href="#">Политика конфиденциальности</a><br/>© 2009-2018 Dino Creative studio. All rights reserved.
+          <div class="footer text-center text-white"><a class="text-white tdu" href="#">Политика конфиденциальности</a><br>© 2009-2018 Dino Creative studio. All rights reserved.
           </div>
         </section>
         <!-- end s-form-->
@@ -965,7 +965,9 @@
     <script src="libs/fullPage.js/vendors/easings.min.js"></script>
     <script src="libs/fullPage.js/vendors/scrolloverflow.min.js"></script>
     <script src="libs/fullPage.js/fullpage.min.js"> </script>
+    <script src="libs/imagesloaded.pkgd.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+    <script src="libs/masonry/dist/masonry.pkgd.min.js"></script>
     <!-- modal libs-->
     <script src="libs/magnificPopup/jquery.magnific-popup.min.js"></script>
     <script src="libs/sticky-kit.js"></script>
