--- a/public/index.html
+++ b/public/index.html
@@ -551,13 +551,29 @@
             </div>
             <div>
               <div class="row">
-                <div class="col-xl-5 col-lg-4"></div>
-                <div class="col">
+                <div class="col"></div>
+                <div class="col-xl-7 col-lg-8">
                   <div class="s-team__swiper-wrapper">
                     <div class="swiper-container gallery-thumbs">
                       <div class="swiper-wrapper">
                         <div class="s-team__slide-sm swiper-slide">
                           <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-1.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-1.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-1.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-2.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-2.png" alt=""/>
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
@@ -569,7 +585,31 @@
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-3.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-3.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
                           <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-5.png" alt=""/>
+                          </div>
+                        </div>
+                        <div class="s-team__slide-sm swiper-slide">
+                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-5.png" alt=""/>
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
@@ -753,7 +793,7 @@
                         <li><a class="s-servises__link" href="#">Сайт визитка</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-1.png"/>
                       </div>
                     </div>
                   </div>
